# Daftpunk_Speaker_IDF

./: CMakeLists.txt  README.md  sdkconfig
Assets/: asset_info.yaml
Assets/RAW/: Better_Faster_Stronger-Sample.raw  Popup_Close-1.raw  Popup_Open-1.raw  Windows_XP_Startup.raw  confirmation_001.raw  confirmation_002.raw  minimize_008.raw  question_002.raw  select_sfx5.raw
Scripts/: cmd_test.py  device_provisioning.py  socket_test.py
main/: Animation.c  Animation.h  Bitmap.c  Bitmap.h  BoardRevision.c  BoardRevision.h  Buttons.c  Buttons.h  CMakeLists.txt  Display_task.c  Display_task.h  Events.c  Events.h  Font.c  Font.h  FrameBuffer.c  FrameBuffer.h  Kconfig.projbuild  Power_Manager.c  Power_Manager.h  daftpunk_speaker.c  global_defines.h  rgb_manager.c  rgb_manager.h  sr_driver.c  sr_driver.h  system_states.h
main/FFT/: FFT.c  FFT.h  FFT_task.c  FFT_task.h
main/Misc/: Stack_Info.c  Stack_Info.h  Time_Helpers.c  Time_Helpers.h
main/StateManager/: state_manager.c  state_manager.h
main/States/: pairing_state.c  system_states.c  system_states.h  system_states_.c  system_states_.h
main/States/DisplayOff/: display_off_state.c  display_off_state.h
main/States/Idle/: idle_state.c  idle_state.h
main/States/Menu/: menu_state.c  menu_state.h
main/States/Pairing/: pairing_state.c  pairing_state.h
main/States/PairingFail/: pairing_fail_state.c  pairing_fail_state.h
main/States/PairingSuccess/: pairing_success_state.c  pairing_success_state.h
main/States/Sleep/: sleep_state.c  sleep_state.h
main/States/Streaming/: streaming_state.c  streaming_state.h
main/TCP_Shell/: message_ids.h  tcp_shell.c  tcp_shell.h
main/TCP_Shell/message_handlers/: message_handlers.c  message_handlers.h  message_structs.h
main/bluetooth_audio/: bt_app_av.c  bt_app_core.c  bt_app_core.h  bt_audio.c  bt_audio.h  i2s_task.c  i2s_task.h
main/drivers/: MAX17048.c  MAX17048.h  PI4IOE5V6408.c  PI4IOE5V6408.h
main/flash/: audio_manager.c  audio_manager.h  flash_manager.c  flash_manager.h
