idf_component_register(SRCS "Events.c"
                            "Buttons.c"
                            "FrameBuffer.c"
                            "sr_driver.c"
                            "Display_task.c"
                            "bluetooth_audio/bt_app_av.c"
                            "bluetooth_audio/bt_app_core.c"
                            "bluetooth_audio/bt_audio.c"
                            "FFT/FFT.c"
                            "FFT/FFT_task.c"
                            "daftpunk_speaker.c"
                    INCLUDE_DIRS "."
                                 "bluetooth_audio"
                                 "FFT")
